--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlazorApp8Context": "Server=(localdb)\\mssqllocaldb;Database=BlazorApp8Context-34b1e054-5285-4d9a-a65c-9b108c224759;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
