--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BlazorApp8Context": "Server=(localdb)\\mssqllocaldb;Database=BlazorApp8Context-34b1e054-5285-4d9a-a65c-9b108c224759;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BlazorApp8Context": "Server=(localdb)\\mssqllocaldb;Database=BlazorApp8Context-34b1e054-5285-4d9a-a65c-9b108c224759;Trusted_Connection=True;MultipleActiveResultSets=true",
+   
   }
 }
